fix for header overlapping new conversation view sometimes

--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -16,17 +16,17 @@ header#pm_header {
 	}
 }
 
-// REGULAR 
+// REGULAR
 header#pm_header-desktop {
 	height: $headerHeight;
 	line-height: $headerHeight;
 	background: $alt;
 	font-size: 12px;
 	position: relative;
-	z-index: 2;
+	z-index: 101;
 	i, b {
 		font-style: normal;
-		font-weight: normal; 
+		font-weight: normal;
 	}
 	a.logo {
 		display: inline-block;
@@ -212,13 +212,13 @@ header#pm_header-desktop {
 	}
 }
 
-header#pm_header-tablet { 
+header#pm_header-tablet {
 	height: 70px;
 	line-height: 70px;
 	background: $alt;
 	font-size: 14px;
 	position: relative;
-	z-index: 2;	
+	z-index: 2;
 	.compose {
 		display: block;
 		height: 50px;
@@ -307,13 +307,13 @@ header#pm_header-mobile {
 		float: left;
 		max-width: 3rem;
 		min-width: 3rem;
-		width: auto;	
+		width: auto;
 		height: 70px;
 		line-height: 70px;
 		box-sizing: border-box;
 		padding: 0 10px;
 		margin: 0;
-		text-align: center;	
+		text-align: center;
 		display: inline-block;
 		color: #fff;
 		img {
